--- a/ApartmentRentalSystem/admin.resx
+++ b/ApartmentRentalSystem/admin.resx
@@ -118,6 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="logoutButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAADYSURBVEhL7ZY9CsJAEEbTWXg4T+AV9CbewE7RxsLWv0Jb
+        0V4bxV5L7fQNcZYQVt3JEoiQBw+W5Zt87LJFkjcrfEa4wSB8w1aDMIVz1EXVLzJRyaIu7tOlnZCiBo5Q
+        cnfZKMKvoibOUXOlFMlJlqiZvDe84gkPuEXJT3GIbXTokI8xZj9s9YIO3fQRW3RGh276kKtbYHZYfaBc
+        m3zsiHJtkp1gH3vYQocOfkIewww1V9qrE+RkAyy9SOngLl3asRRF8RdFptm6KEuhohiDkB9A33Coa/xC
+        krwA/bnJVZwJYNEAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="dashboardIcon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
@@ -173,6 +183,20 @@
         v2W7kthX7kgjt1+PMcml4jdEYqMSluS1jGvMK7koIadfAJdIXGyS4w54d+MDOSH7nJOSj40cNdSmLqxN
         GTAnSXCOTWf74n7XZRMb0q9N9ZuVPc4lQQpi7OtGVt6G7URbv9N65LiTBHnLGGLWkG1vY0pafarfbT3K
         xBr216M0A9LqC4VC4b9TVZ8VzbXI0NSQgQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAHiSURBVFhH7Za9LgZBFIa3oUHjMojQ+OsVKq2KStyBKCkp
+        /F+C3g3o6IREghvAFSBB/L7P7r6MzX6fnV0N8SRP7J7vzJyzszMbyT9/neX8byP65YY8l3e5XBPjt1ZQ
+        /C27rEen3JHPkonK5LdtSW6Ii2MtmHBfMsG93JQjsit3VG7JB0kOuW4iLF5mJXhyki/lAIEWDMorSS4r
+        AY0b4L2ytDy5i/fKxYKGJlgJxvQREI1eAZuLgfw1k9ITlk3M0xNbT+8yam/CC8nA4fQuY0G6MB7JEPYE
+        8bP07hOaiOZGMll3epexK8MGXuWsND2SOGMbU9bAlJzP9XKfSvOjDfgVcOzMiSRGcTdwLM2YJFZ8BbXw
+        JuScmzlJzL7IaWl8bNfSuySZkWF+6Lf4GHK0OGJmQlJgVYarMyQfZXgM92RZcayEl5mPTNhEEYpfS3L5
+        WrYjqoEO6U8xK0FDvGc2Jo5Llp0nJ4dcxrQjqgHg205hltaDiz5JntzFD6V/4zrE8WjYE3zh2OG3uVyz
+        H/zOTdjAAYGA2g38FLUbaPU55aix26tSuwEGrWSXX4idsFEDWGwidsLK+U4sM2zCsapUzndimUvSOFaV
+        2PwPPDAsDo7HGg2DisWhOHFVo6n1X80/v4QkeQdAjfFy4+e1SQAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
