--- a/ApartmentRentalSystem/clerkDashboardScreen.resx
+++ b/ApartmentRentalSystem/clerkDashboardScreen.resx
@@ -117,4 +117,44 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="guna2CircleButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAAaZJREFUWEftkzsvREEYhhchIaF2jUT4BzqNlkSpE6VWJKjxD5RaKkQiQSNKKgq/
+        QCIo3eNWuDzvyXybPbt7ZvaeSM6TPMnOfO/5Zuac2UxKFQzijlO/G0YHruA7/jq/cB07sW404Qzeohb9
+        wS2nfmtONWWUrSmjeIp24gscQ0P1M7T6OebWK6YXN/Ab1fgO57AZ89Gpp/EaldVbqfh+tOE8vqCa2Tfu
+        whB2Rz5Qz765cTuWxBReoR6WBziE5dKPm2j34wZn0Xs/9tEWvsRxrBb1UC/rqzUSWUALtmiiRqiX9dUa
+        ibSiBX3o9e6i7ojcwxH0YX21hpfQBrT4PVrO1FwfJmG5IKGgTq66LqcWlIdubhuTCPXNEgraXzP3tAOo
+        uadoVJxQ3yyh4DOqrk9hNHQDunCq67VrE/LIzenzJBHqmyUU1G1/RcuZmhvGJCwXJBRcQ8vku4pJWCaI
+        LziJqn3iIvY4l9ycahNYDF/fGL7gCaqmxfNZRtWOo1Ehvr4xfMFHVK07GsXRnGoP0agQX98YJQfLJN3A
+        /9tAvQxS7KFampKSQybzB1D23R9bbswdAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="guna2CircleButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DQAACw0B7QfALAAAAZ9JREFUWEftlrsuRFEUho9CNBRuD4DKU3gAUUokEqWGUujUWq8whXgAEkSDuFfi
+        IQRRqCQSl//fe/+ysjGzzsmZKZgv+TJrrb32Mjuz54yiy19jCt4kGXeMQbgJ3+BH8h024ChsGz1wAT5A
+        /tEXuJ5kzBrX2MPeWpmA+1AnPoKTULRar0wvXIM64RNchL+dcBbeQ/a+wg3YBytzAXUqOgxbwR675wxW
+        5hTeQg0jrDE+CVkkr6mfe21fZTSQcCDj45BF8prtr4WyA0u/gSF4Da8gv+c5bX0DvNG7UJt2Us1iB5a5
+        Ay6WIZsfk4yXoMUOrPUO9EN9b+fgfIr5RBuAwj0w4e5fhWzcC1nkALK2ErKIe2DC3X8J2TgdssgMZO08
+        ZBE7sNY78AzZOBKyCGPWuCbswFrvgH7Z+GPCU3AQY9Z4N4R7YMLdvw3ZeJhebbwFhda8uPvH4R3UBska
+        14TqQp+51d4J1VyMQf43o02MWbPkA5Xnijx30WxTvlY2d9FsU75WNnfRbFO+Vjb/xk+XqF3ay/mFHhyd
+        0D6wuvxriuITkzwQE4fR6agAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2CircleButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DgAACw4BQL7hQQAAAZ9JREFUWEftlrsuRFEUho9CNBRuD4DKU3gAUUokEqWGUujUWq8whXgAEkSDuFfi
+        IQRRqCQSl//fe/+ysjGzzsmZKZgv+TJrrb32Mjuz54yiy19jCt4kGXeMQbgJ3+BH8h024ChsGz1wAT5A
+        /tEXuJ5kzBrX2MPeWpmA+1AnPoKTULRar0wvXIM64RNchL+dcBbeQ/a+wg3YBytzAXUqOgxbwR675wxW
+        5hTeQg0jrDE+CVkkr6mfe21fZTSQcCDj45BF8prtr4WyA0u/gSF4Da8gv+c5bX0DvNG7UJt2Us1iB5a5
+        Ay6WIZsfk4yXoMUOrPUO9EN9b+fgfIr5RBuAwj0w4e5fhWzcC1nkALK2ErKIe2DC3X8J2TgdssgMZO08
+        ZBE7sNY78AzZOBKyCGPWuCbswFrvgH7Z+GPCU3AQY9Z4N4R7YMLdvw3ZeJhebbwFhda8uPvH4R3UBska
+        14TqQp+51d4J1VyMQf43o02MWbPkA5Xnijx30WxTvlY2d9FsU75WNnfRbFO+Vjb/xk+XqF3ay/mFHhyd
+        0D6wuvxriuITkzwQE4fR6agAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
